tests/baselines/reference/letDeclarations-es5.errors.txt
tests/cases/compiler/letDeclarations-es5.ts(10,8): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
tests/cases/compiler/letDeclarations-es5.ts(12,8): error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.


==== tests/cases/compiler/letDeclarations-es5.ts (2 errors) ====
    
    let l1;
    let l2: number;
    let l3, l4, l5 :string, l6;
    
    let l7 = false;
    let l8: number = 23;
    let l9 = 0, l10 :string = "", l11 = null;
    
    for(let l11 in {}) { }
           ~~~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
    
    for(let l12 = 0; l12 < 9; l12++) { }
           ~~~~~~~~
!!! error TS1153: 'let' declarations are only available when targeting ECMAScript 6 and higher.
    